--- a/public/homepage.html
+++ b/public/homepage.html
@@ -3,9 +3,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Tech Blog</title>
   </head>
   <body>
-    <h1>Hello Y'all</h1>
+    <div class="header">
+      <h1>Tech Talks</h1>
+      <nav>
+        <ul>
+          <li>
+            <button id="navBtn">Create</a>
+          </li>
+          <li>
+            <button id="navBtn">Blogs</a>
+          </li>
+          <li>
+            <button id="navBtn">LogIn</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <h1>Log In to get Started</h1>
   </body>
 </html>
